web-app/testapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp-deployment
  namespace: ingress-nginx
spec:
  selector:
    matchLabels:
      app: testapp
  replicas: 1
  template:
    metadata:
      labels:
        app: testapp
    spec:
      containers:
      - name: testapp
        image: wata727/ecs-demo-php-simple-app
