web-app/testapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp-service
  namespace: ingress-nginx
  labels:
    app: testapp
spec:
  selector:
    app: testapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30329
  type: NodePort
