web-app/testapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: ingress-nginx
spec:
  rules:
  - host: devops-interview.app.local
    http:
      paths:
      - backend:
          serviceName: testapp-service
          servicePort: 80
